# langchain-rag1

./: 1_rag_train.py  README.md  pyproject.toml
db/chroma_db/: chroma.sqlite3
documents/: story1.txt
