[project]
name = "rag-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Aiwan01",email = "aiwancm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "openai (>=1.78.1,<2.0.0)",
    "chromadb (>=1.0.9,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.16,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
